feat: add versioned team requirements api
